<resources>
    <string name="app_name">Car Zoom</string>
    <string name="title_activity_detail">DetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="preference_last_sync_key">com.example.carzoom.PREFERENCE_LAST_SYNC</string>
    <string name="preference_key">com.example.carzoom.PREFERENCE</string>
    <string name="call_dealer">CALL DEALER</string>
    <string name="location">Location</string>
    <string name="exterior_color">Exterior Color</string>
    <string name="interior_color">Interior Color</string>
    <string name="drive_type">Drive Type</string>
    <string name="transmission">Transmission</string>
    <string name="body_style">Body Style</string>
    <string name="engine">Engine</string>
    <string name="fuel">Fuel</string>
    <string name="vehicle_info">Vehicle Info</string>
</resources>