<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout

        tools:context=".DetailActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/image_margin"
        android:layout_marginBottom="100dp">

        <android.widget.LinearLayout
            android:id="@+id/ll_activity_detail_basic_info"
            app:layout_constraintBottom_toTopOf="@+id/tv_activity_detail_vehicle_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">
            <ImageView
                android:id="@+id/iv_activity_detail_car_image"
                android:layout_width="match_parent"
                android:layout_height="300dp" />
            <TextView
                android:id="@+id/tv_activity_detail_car_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                style="@style/CarZoomTextView"/>
            <TextView
                android:id="@+id/tv_activity_detail_price_mileage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                style="@style/CarZoomBoldTextView"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@color/grey"/>
        </android.widget.LinearLayout>

        <TextView
            app:layout_constraintTop_toBottomOf="@id/ll_activity_detail_basic_info"
            android:id="@+id/tv_activity_detail_vehicle_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_info"
            style="@style/CarZoomBoldTextView"
            />
        <GridLayout
            android:id="@+id/gv_activity_detail_additional_info"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf = "@id/tv_activity_detail_vehicle_info"
            android:layout_marginTop="@dimen/image_margin"
            android:rowCount="8"
            android:columnCount="2">

            <TextView
                android:id="@+id/tv_activity_detail_location"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="5dp"
                android:text="@string/location"
                style="@style/CarZoomTextView"/>
            <TextView
                android:id="@+id/tv_activity_detail_location_value"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="5dp"
                style="@style/CarZoomTextView"/>
            <TextView
                android:id="@+id/tv_activity_detail_excolor"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="5dp"
                android:text="@string/exterior_color"
                style="@style/CarZoomTextView"/>
            <TextView
                android:id="@+id/tv_activity_detail_excolor_value"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="5dp"
                style="@style/CarZoomTextView"/>
            <TextView
                android:id="@+id/tv_activity_detail_incolor"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="5dp"
                android:text="@string/interior_color"
                style="@style/CarZoomTextView"/>
            <TextView
                android:id="@+id/tv_activity_detail_incolor_value"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="5dp"
                style="@style/CarZoomTextView"/>
            <TextView
                android:id="@+id/tv_activity_detail_drivetype"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="5dp"
                android:text="@string/drive_type"
                style="@style/CarZoomTextView"/>
            <TextView
                android:id="@+id/tv_activity_detail_drivetype_value"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="5dp"
                style="@style/CarZoomTextView"/>
            <TextView
                android:id="@+id/tv_activity_detail_transmission"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="5dp"
                android:text="@string/transmission"
                style="@style/CarZoomTextView"/>
            <TextView
                android:id="@+id/tv_activity_detail_transmission_value"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="5dp"
                style="@style/CarZoomTextView"/>

            <TextView
                android:id="@+id/tv_activity_detail_bodystyle"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="5dp"
                android:text="@string/body_style"
                style="@style/CarZoomTextView"/>
            <TextView
                android:id="@+id/tv_activity_detail_bodystyle_value"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="5dp"
                style="@style/CarZoomTextView"/>
            <TextView
                android:id="@+id/tv_activity_engine_excolor"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="5dp"
                android:text="@string/engine"
                style="@style/CarZoomTextView"/>
            <TextView
                android:id="@+id/tv_activity_detail_engine_value"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="5dp"
                style="@style/CarZoomTextView"/>
            <TextView
                android:id="@+id/tv_activity_detail_fuel"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="5dp"
                android:text="@string/fuel"
                style="@style/CarZoomTextView"/>
            <TextView
                android:id="@+id/tv_activity_detail_fuel_value"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="5dp"
                style="@style/CarZoomTextView"/>

        </GridLayout>
        <View
            android:id="@+id/horizontal_rule_detail_activity_two"
            app:layout_constraintTop_toBottomOf="@id/gv_activity_detail_additional_info"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:background="@color/grey"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="36dp"/>
        <Button
            app:layout_constraintTop_toBottomOf="@id/horizontal_rule_detail_activity_two"
            android:id="@+id/button_activity_detail_call_dealer"
            style="@style/PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_dealer"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>